- Some work on the TOC.
* data/toc.xml.in:
- Some work on the TOC.

* src/yelp-db-pager.c:
- Actually use the parser options.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
 2003-11-30  Shaun McCance  <shaunm@gnome.org>
 
 	* data/toc.xml.in:
+	- Some work on the TOC.
+
+	* src/yelp-db-pager.c:
+	- Actually use the parser options.
+
+2003-11-30  Shaun McCance  <shaunm@gnome.org>
+
+	* data/toc.xml.in:
 	- Implementing more of the TOC.
 
 	* src/yelp-toc-pager.c:
