--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-01  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- Make the Loading message kind of animated, for better feedback.
+
+2003-12-01  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-toc-pager.c:
 	- Switched to using a single pending function that calls the appropriate
 	  function on each iteration.  Makes the code nicer.
