- Handling all SK categories, from mariano.
* data/toc.xml.in:
- Handling all SK categories, from mariano.

* src/yelp-window.c:
- Start with Loading..., so the titlebar doesn't look like ass.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-12-01  Shaun McCance  <shaunm@gnome.org>
 
+	* data/toc.xml.in:
+	- Handling all SK categories, from mariano.
+
+	* src/yelp-window.c:
+	- Start with Loading..., so the titlebar doesn't look like ass.
+
+2003-12-01  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-window.c:
 	- Make the Loading message kind of animated, for better feedback.
 
