Yelp 2.5.0: "More Than Meets the Eye"

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-02  Shaun McCance  <shaunm@gnome.org>
 
+	* configure.in: Version 2.5.0.
+
+2003-12-02  Shaun McCance  <shaunm@gnome.org>
+
 	* data/toc.xml.in:
 	- Removed the DOCTYPE, because it was passing straight through intltool
 	  and the resultant toc.xml had an incorrent DOCTYPE.
