- It's test-pager, not yelp-pager.
* src/.cvsignore:
- It's test-pager, not yelp-pager.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-02  Shaun McCance  <shaunm@gnome.org>
 
+	* src/.cvsignore:
+	- It's test-pager, not yelp-pager.
+
+2003-12-02  Shaun McCance  <shaunm@gnome.org>
+
 	* data/.cvsignore:
 	* src/.cvsignore:
 	- Adding data/toc.xml and src/test-pager to .cvsignore
