--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-03  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
+	* POTFILES.in: Added missing files.
+
 2003-11-21  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
