--- a/po/sr.po
+++ b/po/sr.po
@@ -8,55 +8,50 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.6\n"
-"POT-Creation-Date: 2003-12-02 03:43-0600\n"
-"PO-Revision-Date: 2003-09-24 02:53+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-12-03 05:02+0100\n"
+"PO-Revision-Date: 2003-12-03 05:05+0100\n"
 "Last-Translator: Goran Rakić <gox@devbase.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Програми"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "ГНОМ - радно окружење"
+msgstr "Радна површ"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "Развој"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "Развој"
+msgstr "Развојна окружења"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "Развој"
+msgstr "Развојни алати"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/_Измени"
+msgstr "Уређивачи"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "Програми"
+msgstr "Образовни програми"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Игре и забава"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "Опште"
 
 #. GList           *seriesids;
 #: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
@@ -64,45 +59,40 @@ msgid "Help Contents"
 msgstr "Садржај помоћи"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Програми"
+msgstr "Интернет програми"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "КДЕ"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Рутине језгра"
+msgstr "Језгра"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Програми"
+msgstr "Мултимедијални програми"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Канцеларијски и производни програми"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Програми"
+msgstr "Научни програми"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Безбедност"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "Помоћни алати"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "Програми"
+msgstr "Икс програми"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -143,6 +133,32 @@ msgstr "Јелп"
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
 msgstr "Јелп фабрика"
+
+#: src/yelp-db-pager.c:238 src/yelp-window.c:719 src/yelp-window.c:806
+#: src/yelp-window.c:965
+#, c-format
+msgid "The document '%s' could not be opened"
+msgstr "Не могу да отворим документ „%s“"
+
+#: src/yelp-db-pager.c:404
+msgid "No href attribute found on yelp:document"
+msgstr "Нисам нашао href атрибут у yelp:document-у"
+
+#: src/yelp-db-pager.c:419
+msgid "Out of memory"
+msgstr "Понестало меморије"
+
+#: src/yelp-db-pager.c:547
+msgid "Titlepage"
+msgstr "Насловница"
+
+#: src/yelp-db-pager.c:549
+msgid "Contents"
+msgstr "Садржај"
+
+#: src/yelp-db-pager.c:567
+msgid "Unknown"
+msgstr "Непознато"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -218,6 +234,33 @@ msgstr "Прегледи"
 msgid "System Administration"
 msgstr "Администрација система"
 
+#: src/yelp-pager.c:117
+msgid "Document URI"
+msgstr "Адреса документа"
+
+#: src/yelp-pager.c:118
+msgid "The URI of the document to be processed"
+msgstr "Адреса документа за обраду"
+
+# bug: pause or page?
+#: src/yelp-toc-pager.c:224
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: бројач пауза је негативан."
+
+#: src/yelp-toc-pager.c:557 src/yelp-toc-pager.c:569
+msgid "The table of contents could not be read."
+msgstr "Не могу да прочитам садржај."
+
+#: src/yelp-toc-pager.c:770 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
+#: src/yelp-view-toc.c:741
+msgid "Categories"
+msgstr "Категорије"
+
+#: src/yelp-toc-pager.c:791 src/yelp-view-toc.c:366 src/yelp-view-toc.c:549
+#: src/yelp-view-toc.c:740
+msgid "Documents"
+msgstr "Документи"
+
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423 src/yelp-window.c:755
 #: src/yelp-window.c:888
 msgid "Loading..."
@@ -246,14 +289,6 @@ msgstr "Странице са упутствима (man)"
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
 msgid "Info Pages"
 msgstr "Странице са информацијама (info)"
-
-#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
-msgid "Documents"
-msgstr "Документи"
-
-#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
-msgid "Categories"
-msgstr "Категорије"
 
 #: src/yelp-view-toc.c:447
 msgid "Manual pages"
@@ -356,25 +391,19 @@ msgstr "Документ „%s“ не постоји"
 
 #: src/yelp-window.c:644
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
-
-#: src/yelp-window.c:719 src/yelp-window.c:806 src/yelp-window.c:965
-#, fuzzy, c-format
-msgid "The document '%s' could not be opened"
-msgstr "Документ „%s“ не постоји"
+msgstr "DocBook SGML документи више нису подржани."
 
 #: src/yelp-window.c:876
 msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+msgstr "Учитавам&nbsp;&nbsp;&nbsp;"
 
 #: src/yelp-window.c:880
 msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+msgstr "Учитавам.&nbsp;&nbsp;"
 
 #: src/yelp-window.c:884
-#, fuzzy
 msgid "Loading..&nbsp;"
-msgstr "Учитавам..."
+msgstr "Учитавам...&nbsp;"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
@@ -383,8 +412,7 @@ msgid "translator_credits"
 msgstr ""
 "Горан Ракић <gox@devbase.net>\n"
 "\n"
-"Пројекат превођења Гном окружења на српски језик\n"
-"http://www.prevod.org"
+"Prevod.org — превод на српски језик."
 
 #: src/yelp-window.c:1051
 msgid "A Help Browser for GNOME"
@@ -400,9 +428,6 @@ msgstr "Помоћ"
 
 #~ msgid "About This Document"
 #~ msgstr "О овом документу"
-
-#~ msgid "Contents"
-#~ msgstr "Садржај"
 
 #~ msgid "Previous"
 #~ msgstr "Претходно"
