--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -8,55 +8,50 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.6\n"
-"POT-Creation-Date: 2003-12-02 03:43-0600\n"
-"PO-Revision-Date: 2003-09-24 02:53+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-12-03 05:02+0100\n"
+"PO-Revision-Date: 2003-12-03 05:05+0100\n"
 "Last-Translator: Goran Rakić <gox@devbase.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Programi"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOM - radno okruženje"
+msgstr "Radna površ"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "Razvoj"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "Razvoj"
+msgstr "Razvojna okruženja"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "Razvoj"
+msgstr "Razvojni alati"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/_Izmeni"
+msgstr "Uređivači"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "Programi"
+msgstr "Obrazovni programi"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Igre i zabava"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "Opšte"
 
 #. GList           *seriesids;
 #: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
@@ -64,45 +59,40 @@ msgid "Help Contents"
 msgstr "Sadržaj pomoći"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Programi"
+msgstr "Internet programi"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Rutine jezgra"
+msgstr "Jezgra"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Programi"
+msgstr "Multimedijalni programi"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Kancelarijski i proizvodni programi"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Programi"
+msgstr "Naučni programi"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Bezbednost"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "Pomoćni alati"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "Programi"
+msgstr "Iks programi"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -143,6 +133,32 @@ msgstr "Jelp"
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
 msgstr "Jelp fabrika"
+
+#: src/yelp-db-pager.c:238 src/yelp-window.c:719 src/yelp-window.c:806
+#: src/yelp-window.c:965
+#, c-format
+msgid "The document '%s' could not be opened"
+msgstr "Ne mogu da otvorim dokument „%s“"
+
+#: src/yelp-db-pager.c:404
+msgid "No href attribute found on yelp:document"
+msgstr "Nisam našao href atribut u yelp:document-u"
+
+#: src/yelp-db-pager.c:419
+msgid "Out of memory"
+msgstr "Ponestalo memorije"
+
+#: src/yelp-db-pager.c:547
+msgid "Titlepage"
+msgstr "Naslovnica"
+
+#: src/yelp-db-pager.c:549
+msgid "Contents"
+msgstr "Sadržaj"
+
+#: src/yelp-db-pager.c:567
+msgid "Unknown"
+msgstr "Nepoznato"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -218,6 +234,33 @@ msgstr "Pregledi"
 msgid "System Administration"
 msgstr "Administracija sistema"
 
+#: src/yelp-pager.c:117
+msgid "Document URI"
+msgstr "Adresa dokumenta"
+
+#: src/yelp-pager.c:118
+msgid "The URI of the document to be processed"
+msgstr "Adresa dokumenta za obradu"
+
+# bug: pause or page?
+#: src/yelp-toc-pager.c:224
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: brojač pauza je negativan."
+
+#: src/yelp-toc-pager.c:557 src/yelp-toc-pager.c:569
+msgid "The table of contents could not be read."
+msgstr "Ne mogu da pročitam sadržaj."
+
+#: src/yelp-toc-pager.c:770 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
+#: src/yelp-view-toc.c:741
+msgid "Categories"
+msgstr "Kategorije"
+
+#: src/yelp-toc-pager.c:791 src/yelp-view-toc.c:366 src/yelp-view-toc.c:549
+#: src/yelp-view-toc.c:740
+msgid "Documents"
+msgstr "Dokumenti"
+
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423 src/yelp-window.c:755
 #: src/yelp-window.c:888
 msgid "Loading..."
@@ -246,14 +289,6 @@ msgstr "Stranice sa uputstvima (man)"
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
 msgid "Info Pages"
 msgstr "Stranice sa informacijama (info)"
-
-#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
-msgid "Documents"
-msgstr "Dokumenti"
-
-#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
-msgid "Categories"
-msgstr "Kategorije"
 
 #: src/yelp-view-toc.c:447
 msgid "Manual pages"
@@ -356,25 +391,19 @@ msgstr "Dokument „%s“ ne postoji"
 
 #: src/yelp-window.c:644
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
-
-#: src/yelp-window.c:719 src/yelp-window.c:806 src/yelp-window.c:965
-#, fuzzy, c-format
-msgid "The document '%s' could not be opened"
-msgstr "Dokument „%s“ ne postoji"
+msgstr "DocBook SGML dokumenti više nisu podržani."
 
 #: src/yelp-window.c:876
 msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+msgstr "Učitavam&nbsp;&nbsp;&nbsp;"
 
 #: src/yelp-window.c:880
 msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+msgstr "Učitavam.&nbsp;&nbsp;"
 
 #: src/yelp-window.c:884
-#, fuzzy
 msgid "Loading..&nbsp;"
-msgstr "Učitavam..."
+msgstr "Učitavam...&nbsp;"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
@@ -383,8 +412,7 @@ msgid "translator_credits"
 msgstr ""
 "Goran Rakić <gox@devbase.net>\n"
 "\n"
-"Projekat prevođenja Gnom okruženja na srpski jezik\n"
-"http://www.prevod.org"
+"Prevod.org — prevod na srpski jezik."
 
 #: src/yelp-window.c:1051
 msgid "A Help Browser for GNOME"
@@ -400,9 +428,6 @@ msgstr "Pomoć"
 
 #~ msgid "About This Document"
 #~ msgstr "O ovom dokumentu"
-
-#~ msgid "Contents"
-#~ msgstr "Sadržaj"
 
 #~ msgid "Previous"
 #~ msgstr "Prethodno"
