--- a/po/mn.po
+++ b/po/mn.po
@@ -8,102 +8,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
-"POT-Creation-Date: 2003-12-02 03:43-0600\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-12-03 02:58+0100\n"
 "PO-Revision-Date: 2003-08-23 14:24+0200\n"
 "Last-Translator: Sanlig Badral <Badral@openmn.org>\n"
 "Language-Team: Mongolian <openmn-kdemn@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.0.2\n"
-
-#: data/toc.xml.in.h:1 src/yelp-man.c:429
-msgid "Applications"
-msgstr "Х.программ"
-
-#: data/toc.xml.in.h:2
-#, fuzzy
-msgid "Desktop"
-msgstr "GNOME - Desktop"
-
-#: data/toc.xml.in.h:3 src/yelp-man.c:434
-msgid "Development"
-msgstr "Хөгжил"
-
-#: data/toc.xml.in.h:4
-#, fuzzy
-msgid "Development Environments"
-msgstr "Хөгжил"
-
-#: data/toc.xml.in.h:5
-#, fuzzy
-msgid "Development Tools"
-msgstr "Хөгжил"
-
-#: data/toc.xml.in.h:6
-#, fuzzy
-msgid "Editors"
-msgstr "/_Боловсруулах"
-
-#: data/toc.xml.in.h:7
-#, fuzzy
-msgid "Education Applications"
-msgstr "Х.программ"
-
-#: data/toc.xml.in.h:8
-msgid "Games and Entertainment"
-msgstr ""
-
-#: data/toc.xml.in.h:9
-msgid "General"
-msgstr ""
-
-#. GList           *seriesids;
-#: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
-msgid "Help Contents"
-msgstr "Тусламж агуулга"
-
-#: data/toc.xml.in.h:11
-#, fuzzy
-msgid "Internet Applications"
-msgstr "Х.программ"
-
-#: data/toc.xml.in.h:12
-msgid "KDE"
-msgstr ""
-
-#: data/toc.xml.in.h:13
-#, fuzzy
-msgid "Kernels"
-msgstr "Kernel Routines"
-
-#: data/toc.xml.in.h:14
-#, fuzzy
-msgid "Multimedia Applications"
-msgstr "Х.программ"
-
-#: data/toc.xml.in.h:15
-msgid "Office and Productivity Applications"
-msgstr ""
-
-#: data/toc.xml.in.h:16
-#, fuzzy
-msgid "Scientific Applications"
-msgstr "Х.программ"
-
-#: data/toc.xml.in.h:17
-msgid "Securities"
-msgstr ""
-
-#: data/toc.xml.in.h:18
-msgid "Utilities"
-msgstr ""
-
-#: data/toc.xml.in.h:19
-#, fuzzy
-msgid "X Applications"
-msgstr "Х.программ"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -199,6 +112,14 @@ msgstr "Сангийн функцүүд"
 msgid "Kernel Routines"
 msgstr "Kernel Routines"
 
+#: src/yelp-man.c:429
+msgid "Applications"
+msgstr "Х.программ"
+
+#: src/yelp-man.c:434
+msgid "Development"
+msgstr "Хөгжил"
+
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
 msgstr "Hardware төхөөрөмж"
@@ -219,18 +140,22 @@ msgstr "Тойм"
 msgid "System Administration"
 msgstr "Системийн зохион байгуулагч"
 
-#: src/yelp-view-content.c:487 src/yelp-view-index.c:423 src/yelp-window.c:755
-#: src/yelp-window.c:888
+#: src/yelp-view-content.c:487 src/yelp-view-index.c:423
 msgid "Loading..."
 msgstr "Ачаалж байна..."
 
-#: src/yelp-view-content.c:528 src/yelp-view-index.c:517 src/yelp-window.c:441
+#: src/yelp-view-content.c:528 src/yelp-view-index.c:517
 msgid "Section"
 msgstr "Хэсэг"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
 msgstr "_Хайх:"
+
+#. GList           *seriesids;
+#: src/yelp-view-toc.c:165
+msgid "Help Contents"
+msgstr "Тусламж агуулга"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
@@ -273,123 +198,111 @@ msgstr "чөлөөт программ хангамж"
 msgid "(C)"
 msgstr "(C)"
 
-#: src/yelp-window.c:200
+#: src/yelp-window.c:171
 msgid "/_File"
 msgstr "/_Файл"
 
-#: src/yelp-window.c:201
+#: src/yelp-window.c:172
 msgid "/File/_New window"
 msgstr "/Файл/_Шинэ цонх"
 
-#: src/yelp-window.c:204
+#: src/yelp-window.c:173
 msgid "/File/_Close window"
 msgstr "/Файл/Цонх _хаах"
 
-#: src/yelp-window.c:208
+#: src/yelp-window.c:175
 msgid "/_Edit"
 msgstr "/_Боловсруулах"
 
-#.
-#. {N_("/Edit/_Find in page..."),   NULL,
-#. window_find_cb,                 0,
-#. "<StockItem>",                  GTK_STOCK_FIND             },
-#. {N_("/Edit/_Find again"),        "<Control>g",
-#. window_find_again_cb,           0,
-#. "<StockItem>",                  GTK_STOCK_FIND             },
-#.
-#: src/yelp-window.c:218
+#: src/yelp-window.c:176
+msgid "/Edit/_Find in page..."
+msgstr "/Боловсруулах/Хуудсан дотор х_айх..."
+
+#: src/yelp-window.c:177
+msgid "/Edit/_Find again"
+msgstr "/Боловсруулах/_Цааш хайх"
+
+#: src/yelp-window.c:179
 msgid "/_Go"
 msgstr "/_Оч"
 
-#.
-#. {N_("/Go/_Back"),                NULL,
-#. window_history_go_cb,           YELP_WINDOW_ACTION_BACK,
-#. "<StockItem>",                  GTK_STOCK_GO_BACK          },
-#. {N_("/Go/_Forward"),             NULL,
-#. window_history_go_cb,           YELP_WINDOW_ACTION_FORWARD,
-#. "<StockItem>",                  GTK_STOCK_GO_FORWARD       },
-#. {N_("/Go/_Home"),                NULL,
-#. window_go_home_cb,              0,
-#. "<StockItem>",                  GTK_STOCK_HOME             },
-#. {N_("/Go/_Index"),               NULL,
-#. window_go_index_cb,             0,
-#. "<StockItem>",                  GTK_STOCK_INDEX            },
-#.
-#: src/yelp-window.c:234
+#: src/yelp-window.c:180
+msgid "/Go/_Back"
+msgstr "/Оч/_Хойш"
+
+#: src/yelp-window.c:181
+msgid "/Go/_Forward"
+msgstr "/Оч/_Урагш"
+
+#: src/yelp-window.c:182
+msgid "/Go/_Home"
+msgstr "/Оч/_Эхлэл"
+
+#: src/yelp-window.c:183
+msgid "/Go/_Index"
+msgstr "/Оч/_Жигсаалт"
+
+#: src/yelp-window.c:185
 msgid "/_Help"
 msgstr "/_Тусламж"
 
-#: src/yelp-window.c:235
+#: src/yelp-window.c:186
 msgid "/Help/_About"
 msgstr "/Тусламж/_Тухай"
 
-#: src/yelp-window.c:297
+#: src/yelp-window.c:255 src/yelp-window.c:455
 msgid "Help Browser"
 msgstr "Тусламж хөтөч"
 
-#: src/yelp-window.c:494
-msgid "Back"
-msgstr "Буцах"
-
-#: src/yelp-window.c:495
-msgid "Show previous page in history"
-msgstr "Түүх доторхи өмнөх хуудсыг харуулах"
-
-#: src/yelp-window.c:505
-msgid "Forward"
-msgstr "Урагш"
-
-#: src/yelp-window.c:506
-msgid "Show next page in history"
-msgstr "Түүх доторхи дараах хуудсыг харуулах"
-
-#: src/yelp-window.c:518
-msgid "Home"
-msgstr "Эхлэл"
-
-# CHECK
-#: src/yelp-window.c:519
-msgid "Go to home view"
-msgstr "Эхлэл рүү очих"
-
-#: src/yelp-window.c:624
+#: src/yelp-window.c:368
 #, c-format
 msgid "The document '%s' does not exist"
 msgstr "»%s« баримт алга байна"
 
-#: src/yelp-window.c:644
-msgid "DocBook SGML documents are no longer supported."
-msgstr ""
-
-#: src/yelp-window.c:719 src/yelp-window.c:806 src/yelp-window.c:965
-#, fuzzy, c-format
-msgid "The document '%s' could not be opened"
-msgstr "»%s« баримт алга байна"
-
-#: src/yelp-window.c:876
-msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
-
-#: src/yelp-window.c:880
-msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
-
-#: src/yelp-window.c:884
-#, fuzzy
-msgid "Loading..&nbsp;"
-msgstr "Ачаалж байна..."
-
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1046
+#: src/yelp-window.c:695
 msgid "translator_credits"
 msgstr ""
 "Санлиг Бадрал <badral@chinggis.com>\n"
 "Очирбат Батзаяа <buuvei@yahoo.com>"
 
-#: src/yelp-window.c:1051
+#: src/yelp-window.c:699
 msgid "A Help Browser for GNOME"
 msgstr "Гноме-ийн Тусламж Хөтөч"
+
+#: src/yelp-window.c:813
+msgid "Back"
+msgstr "Буцах"
+
+#: src/yelp-window.c:814
+msgid "Show previous page in history"
+msgstr "Түүх доторхи өмнөх хуудсыг харуулах"
+
+#: src/yelp-window.c:825
+msgid "Forward"
+msgstr "Урагш"
+
+#: src/yelp-window.c:826
+msgid "Show next page in history"
+msgstr "Түүх доторхи дараах хуудсыг харуулах"
+
+#: src/yelp-window.c:839
+msgid "Home"
+msgstr "Эхлэл"
+
+# CHECK
+#: src/yelp-window.c:840
+msgid "Go to home view"
+msgstr "Эхлэл рүү очих"
+
+#: src/yelp-window.c:850
+msgid "Index"
+msgstr "Жигсаалт"
+
+#: src/yelp-window.c:851
+msgid "Search in the index"
+msgstr "Жигсаалтад хайх"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -398,27 +311,3 @@ msgstr "GNOME -н тусламж авах"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Тусламж"
-
-#~ msgid "/Edit/_Find in page..."
-#~ msgstr "/Боловсруулах/Хуудсан дотор х_айх..."
-
-#~ msgid "/Edit/_Find again"
-#~ msgstr "/Боловсруулах/_Цааш хайх"
-
-#~ msgid "/Go/_Back"
-#~ msgstr "/Оч/_Хойш"
-
-#~ msgid "/Go/_Forward"
-#~ msgstr "/Оч/_Урагш"
-
-#~ msgid "/Go/_Home"
-#~ msgstr "/Оч/_Эхлэл"
-
-#~ msgid "/Go/_Index"
-#~ msgstr "/Оч/_Жигсаалт"
-
-#~ msgid "Index"
-#~ msgstr "Жигсаалт"
-
-#~ msgid "Search in the index"
-#~ msgstr "Жигсаалтад хайх"
