Updated Lithuanian translation.
2003-12-04  Zygimantas Berucka  <uid0@tuxfamily.org>

* lt.po: Updated Lithuanian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-04  Žygimantas Beručka  <uid0@tuxfamilt.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2003-12-03   Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Tino Meinen.
