--- a/po/lt.po
+++ b/po/lt.po
@@ -1,60 +1,56 @@
 # Lithuanian translation of yelp
 # Copyright (C) 2003 Free Software Foundation, Inc.
 # Tomas Kuliavas <tokul@users.sourceforge.net>, 2003.
+# Tomas Kuliavas <tokul@users.sourceforge.net>, 2003.
 # 
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2003-12-02 03:43-0600\n"
-"PO-Revision-Date: 2003-10-06 14:28+0300\n"
-"Last-Translator: Tomas Kuliavas <tokul@users.sourceforge.net>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2003-12-04 15:34+0200\n"
+"PO-Revision-Date: 2003-12-04 15:34+0200\n"
+"Last-Translator: Žygimantas Beručka <uid0@tuxfamily.org>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Programos"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Aplinka"
+msgstr "Darbastalis"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
 msgstr "Programavimas"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "Programavimas"
+msgstr "Programavimo aplinkos"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "Programavimas"
+msgstr "Programavimo įrankiai"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/_Taisyti"
+msgstr "Redaktoriai"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "Programos"
+msgstr "Mokomosios programos"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Žaidimai ir pramogos"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "Pagrindiniai"
 
 #. GList           *seriesids;
 #: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
@@ -62,45 +58,40 @@ msgid "Help Contents"
 msgstr "Pagalbos žinyno turinys"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Programos"
+msgstr "Interneto programos"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Branduolio funkcijos"
+msgstr "Branduoliai"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Programos"
+msgstr "Multimedia programos"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Ofisinės programos"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Programos"
+msgstr "Mokslinės programos"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "Apsaugos"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "Naudės"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "Programos"
+msgstr "X Programos"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -112,7 +103,7 @@ msgstr "<b>Rasti tekstą dokumente:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr "Automatiškai _pradėti nuo pradžios"
+msgstr "Automatiškai _pažymėti radinį"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
@@ -136,20 +127,46 @@ msgstr "_Ankstesnis"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "Pagalba"
+msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Pagalbos gamykla"
+msgstr "Yelp gamykla"
+
+#: src/yelp-db-pager.c:238 src/yelp-window.c:719 src/yelp-window.c:806
+#: src/yelp-window.c:965
+#, c-format
+msgid "The document '%s' could not be opened"
+msgstr "Dokumentas '%s' negali būti atidarytas"
+
+#: src/yelp-db-pager.c:404
+msgid "No href attribute found on yelp:document"
+msgstr "Href atributų yelp:document nerasta"
+
+#: src/yelp-db-pager.c:419
+msgid "Out of memory"
+msgstr "Nėra atminties"
+
+#: src/yelp-db-pager.c:547
+msgid "Titlepage"
+msgstr "Antraštinis puslapis"
+
+#: src/yelp-db-pager.c:549
+msgid "Contents"
+msgstr "Turinys"
+
+#: src/yelp-db-pager.c:567
+msgid "Unknown"
+msgstr "Nežinima"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr "Nustatyti kurį podėlio katalogą naudoti"
+msgstr "Nustatyti kurį atsargos atmintinės aplanką naudoti"
 
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Nepavyko paleisti pagalbos sistemos: '%s'"
+msgstr "Nepavyko paleisti Yelp: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
@@ -198,7 +215,7 @@ msgstr "Branduolio funkcijos"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "Įrengimai"
+msgstr "Įrenginiai"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
@@ -216,14 +233,40 @@ msgstr "Apžvalgos"
 msgid "System Administration"
 msgstr "Sistemos administravimas"
 
+#: src/yelp-pager.c:117
+msgid "Document URI"
+msgstr "Dokumento URI"
+
+#: src/yelp-pager.c:118
+msgid "The URI of the document to be processed"
+msgstr "Apdorojamo dokumento URI"
+
+#: src/yelp-toc-pager.c:224
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: Pauzės skaičiavimas yra neigiamas."
+
+#: src/yelp-toc-pager.c:557 src/yelp-toc-pager.c:569
+msgid "The table of contents could not be read."
+msgstr "Turinys negali būti perskaitytas."
+
+#: src/yelp-toc-pager.c:770 src/yelp-view-toc.c:367 src/yelp-view-toc.c:493
+#: src/yelp-view-toc.c:741
+msgid "Categories"
+msgstr "Kategorijos"
+
+#: src/yelp-toc-pager.c:791 src/yelp-view-toc.c:366 src/yelp-view-toc.c:549
+#: src/yelp-view-toc.c:740
+msgid "Documents"
+msgstr "Dokumentai"
+
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423 src/yelp-window.c:755
 #: src/yelp-window.c:888
 msgid "Loading..."
-msgstr "Paleidžiama..."
+msgstr "Įkeliama..."
 
 #: src/yelp-view-content.c:528 src/yelp-view-index.c:517 src/yelp-window.c:441
 msgid "Section"
-msgstr "Sekcija"
+msgstr "Skyrius"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
@@ -244,14 +287,6 @@ msgstr "Pagalbos Puslapiai"
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
 msgid "Info Pages"
 msgstr "Informaciniai puslapiai"
-
-#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
-msgid "Documents"
-msgstr "Dokumentai"
-
-#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
-msgid "Categories"
-msgstr "Kategorijos"
 
 #: src/yelp-view-toc.c:447
 msgid "Manual pages"
@@ -354,31 +389,27 @@ msgstr "Dokumentas '%s' neegzistuoja"
 
 #: src/yelp-window.c:644
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
-
-#: src/yelp-window.c:719 src/yelp-window.c:806 src/yelp-window.c:965
-#, fuzzy, c-format
-msgid "The document '%s' could not be opened"
-msgstr "Dokumentas '%s' neegzistuoja"
+msgstr "DocBook SGML dokumentai daugiau nepalaikomi."
 
 #: src/yelp-window.c:876
 msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+msgstr "Įkeliama&nbsp;&nbsp;&nbsp;"
 
 #: src/yelp-window.c:880
 msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+msgstr "Įkeliama.&nbsp;&nbsp;"
 
 #: src/yelp-window.c:884
-#, fuzzy
 msgid "Loading..&nbsp;"
-msgstr "Paleidžiama..."
+msgstr "Įkeliama..&nbsp;"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1046
 msgid "translator_credits"
-msgstr "Tomas Kuliavas <tokul@users.sourceforge.net>"
+msgstr ""
+"Tomas Kuliavas <tokul@users.sourceforge.net>,Žygimantas Beručka "
+"<uid0@tuxfamily.org>"
 
 #: src/yelp-window.c:1051
 msgid "A Help Browser for GNOME"
@@ -391,18 +422,6 @@ msgstr "Gauti pagalbą dirbant su GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Pagalba"
-
-#~ msgid "About This Document"
-#~ msgstr "Apie šį dokumentą"
-
-#~ msgid "Contents"
-#~ msgstr "Turinys"
-
-#~ msgid "Previous"
-#~ msgstr "Ankstesnis"
-
-#~ msgid "Next"
-#~ msgstr "Sekantis"
 
 #~ msgid "/Edit/_Find in page..."
 #~ msgstr "/Taisyti/_Rasti puslapyje..."
@@ -427,3 +446,12 @@ msgstr "Pagalba"
 
 #~ msgid "Search in the index"
 #~ msgstr "Ieškoti tarp indeksų"
+
+#~ msgid "About This Document"
+#~ msgstr "Apie šį dokumentą"
+
+#~ msgid "Previous"
+#~ msgstr "Ankstesnis"
+
+#~ msgid "Next"
+#~ msgstr "Sekantis"
