src/yelp-window.c - Patch from Chee Bin HOH to add Back, Forward, and Find
* src/yelp-window.c
- Patch from Chee Bin HOH to add Back, Forward, and Find in Page

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-05  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c
+	- Patch from Chee Bin HOH to add Back, Forward, and Find in Page
+
 2003-12-03  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
