- Patch from Diego González to fix crashing bug in g_object_new.
* src/yelp-toc-pager.c:
- Patch from Diego González to fix crashing bug in g_object_new.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-06  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Patch from Diego González to fix crashing bug in g_object_new.
+
 2003-12-05  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c
