Updated Thai (th) translation.
2003-12-07  Paisa Seeluangsawat  <paisa@users.sf.net>

        * th.po: Updated Thai (th) translation.

--- a/po/th.po
+++ b/po/th.po
@@ -7,99 +7,89 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2003-12-02 03:43-0600\n"
-"PO-Revision-Date: 2003-02-21 16:47-0700\n"
+"PO-Revision-Date: 2003-12-07 17:55-0600\n"
 "Last-Translator: Paisa Seeluangsawat <paisa@colorado.edu>\n"
 "Language-Team: Thai <L10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=TIS-620\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/toc.xml.in.h:1 src/yelp-man.c:429
 msgid "Applications"
-msgstr "‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°‡πÉ‡∏ä‡πâ‡∏á‡∏≤‡∏ô"
+msgstr "‚ª√·°√¡„™Èß“π"
 
 #: data/toc.xml.in.h:2
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Desktop"
+msgstr "æ◊Èπ‚µÍ–"
 
 #: data/toc.xml.in.h:3 src/yelp-man.c:434
 msgid "Development"
-msgstr "‡∏Å‡∏≤‡∏£‡∏û‡∏±‡∏í‡∏ô‡∏≤‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°"
+msgstr "°“√æ—≤π“‚ª√·°√¡"
 
 #: data/toc.xml.in.h:4
-#, fuzzy
 msgid "Development Environments"
-msgstr "‡∏Å‡∏≤‡∏£‡∏û‡∏±‡∏í‡∏ô‡∏≤‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°"
+msgstr " ¿“æ·«¥≈ÈÕ¡°“√æ—≤π“‚ª√·°√¡"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Tools"
-msgstr "‡∏Å‡∏≤‡∏£‡∏û‡∏±‡∏í‡∏ô‡∏≤‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°"
+msgstr "‡§√◊ËÕß¡◊Õæ—≤π“‚ª√·°√¡"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Editors"
-msgstr "/‡πÅ‡∏Å‡πâ‡πÑ‡∏Ç (_E)"
+msgstr "µ—«·°È‰¢"
 
 #: data/toc.xml.in.h:7
-#, fuzzy
 msgid "Education Applications"
-msgstr "‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°‡πÉ‡∏ä‡πâ‡∏á‡∏≤‡∏ô"
+msgstr "‚ª√·°√¡™Ë«¬‡√’¬π√ŸÈ"
 
 #: data/toc.xml.in.h:8
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "‡°¡·≈–æ—°ºËÕπ"
 
 #: data/toc.xml.in.h:9
 msgid "General"
-msgstr ""
+msgstr "∑—Ë«‰ª"
 
 #. GList           *seriesids;
 #: data/toc.xml.in.h:10 src/yelp-view-toc.c:165
 msgid "Help Contents"
-msgstr "‡∏ß‡∏¥‡∏ò‡∏¥‡πÉ‡∏ä‡πâ"
+msgstr "‡π◊ÈÕÀ“«‘∏‘„™È"
 
 #: data/toc.xml.in.h:11
-#, fuzzy
 msgid "Internet Applications"
-msgstr "‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°‡πÉ‡∏ä‡πâ‡∏á‡∏≤‡∏ô"
+msgstr "‚ª√·°√¡Õ‘π‡∑Õ√Ï‡πÁµ"
 
 #: data/toc.xml.in.h:12
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:13
-#, fuzzy
 msgid "Kernels"
-msgstr "Kernel Routines"
+msgstr "Kernels"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°‡πÉ‡∏ä‡πâ‡∏á‡∏≤‡∏ô"
+msgstr "‚ª√·°√¡ ◊ËÕº ¡"
 
 #: data/toc.xml.in.h:15
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "‚ª√·°√¡ ”π—°ß“π"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°‡πÉ‡∏ä‡πâ‡∏á‡∏≤‡∏ô"
+msgstr "‚ª√·°√¡«‘∑¬“»“ µ√Ï"
 
 #: data/toc.xml.in.h:17
 msgid "Securities"
-msgstr ""
+msgstr "√–∫∫§«“¡ª≈Õ¥¿—¬"
 
 #: data/toc.xml.in.h:18
 msgid "Utilities"
-msgstr ""
+msgstr "Õ√√∂ª√–‚¬™πÏ"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "X Applications"
-msgstr "‡πÇ‡∏õ‡∏£‡πÅ‡∏Å‡∏£‡∏°‡πÉ‡∏ä‡πâ‡∏á‡∏≤‡∏ô"
+msgstr "‚ª√·°√¡„π X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -107,31 +97,31 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr "<b>‡∏´‡∏≤‡∏Ç‡πâ‡∏≠‡∏Ñ‡∏ß‡∏≤‡∏°‡πÉ‡∏ô‡πÄ‡∏≠‡∏Å‡∏™‡∏≤‡∏£:</b>"
+msgstr "<b>À“¢ÈÕ§«“¡„π‡Õ° “√:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr "‡πÄ‡∏£‡∏¥‡πà‡∏°‡∏ï‡πâ‡∏ô‡πÉ‡∏´‡∏°‡πà‡πÄ‡∏°‡∏∑‡πà‡∏≠‡∏™‡∏∏‡∏î‡πÄ‡∏≠‡∏Å‡∏™‡∏≤‡∏£"
+msgstr "‡√‘Ë¡µÈπ„À¡Ë‡¡◊ËÕ ÿ¥‡Õ° “√ (_W)"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr "‡∏´‡∏≤‡∏Ç‡πâ‡∏≠‡∏Ñ‡∏ß‡∏≤‡∏°..."
+msgstr "À“¢ÈÕ§«“¡..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr "‡∏ï‡∏£‡∏á‡∏Å‡∏±‡∏ö‡∏ó‡∏±‡πâ‡∏á‡∏Ñ‡∏≥ (_E)"
+msgstr "µ√ß°—∫∑—Èß§” (_E)"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr "‡∏ï‡∏£‡∏á‡∏≠‡∏±‡∏Å‡∏©‡∏£‡∏ï‡∏±‡∏ß‡πÉ‡∏´‡∏ç‡πà‡πÄ‡∏•‡πá‡∏Å (_M)"
+msgstr "µ√ßÕ—°…√µ—«„À≠Ë‡≈Á° (_M)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr "‡∏ñ‡∏±‡∏î‡πÑ‡∏õ (_N)"
+msgstr "∂—¥‰ª (_N)"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr "‡∏≠‡∏±‡∏ô‡∏Å‡πà‡∏≠‡∏ô (_P)"
+msgstr "Õ—π°ËÕπ (_P)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -139,20 +129,20 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "‡πÇ‡∏£‡∏á‡∏á‡∏≤‡∏ô Yelp"
+msgstr "‚√ßß“π Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "µ—Èß‚ø≈‡¥Õ√Ï„™È‡°Á∫¢ÈÕ¡Ÿ≈™—Ë«§√“«"
 
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "‡πÄ‡∏£‡∏µ‡∏¢‡∏Å‡πÉ‡∏ä‡πâ Yelp ‡πÑ‡∏°‡πà‡∏™‡∏≥‡πÄ‡∏£‡πá‡∏à: '%s'"
+msgstr "‡√’¬°„™È Yelp ‰¡Ë ”‡√Á®: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "‡πÄ‡∏õ‡∏¥‡∏î‡∏´‡∏ô‡πâ‡∏≤‡∏ï‡πà‡∏≤‡∏á‡πÉ‡∏´‡∏°‡πà‡πÑ‡∏°‡πà‡∏™‡∏≥‡πÄ‡∏£‡πá‡∏à"
+msgstr "‡ª‘¥ÀπÈ“µË“ß„À¡Ë‰¡Ë ”‡√Á®"
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -197,36 +187,36 @@ msgstr "Kernel Routines"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "‡∏ä‡∏¥‡πâ‡∏ô‡∏™‡πà‡∏ß‡∏ô‡∏≠‡∏∏‡∏õ‡∏Å‡∏£‡∏ì‡πå"
+msgstr "™‘Èπ Ë«πÕÿª°√≥Ï"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "‡πÅ‡∏ü‡πâ‡∏°‡∏õ‡∏£‡∏±‡∏ö‡πÅ‡∏ï‡πà‡∏á‡∏Ñ‡πà‡∏≤"
+msgstr "·øÈ¡ª√—∫·µËß§Ë“"
 
 #: src/yelp-man.c:449
 msgid "Games"
-msgstr "‡πÄ‡∏Å‡∏°"
+msgstr "‡°¡"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
-msgstr "‡∏†‡∏≤‡∏û‡∏£‡∏ß‡∏°"
+msgstr "¿“æ√«¡"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "‡∏Å‡∏≤‡∏£‡∏î‡∏π‡πÅ‡∏•‡∏£‡∏∞‡∏ö‡∏ö"
+msgstr "°“√¥Ÿ·≈√–∫∫"
 
 #: src/yelp-view-content.c:487 src/yelp-view-index.c:423 src/yelp-window.c:755
 #: src/yelp-window.c:888
 msgid "Loading..."
-msgstr "‡∏Å‡∏≥‡∏•‡∏±‡∏á‡πÄ‡∏£‡∏µ‡∏¢‡∏Å..."
+msgstr "°”≈—ß‡√’¬°..."
 
 #: src/yelp-view-content.c:528 src/yelp-view-index.c:517 src/yelp-window.c:441
 msgid "Section"
-msgstr "‡∏™‡πà‡∏ß‡∏ô"
+msgstr " Ë«π"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
-msgstr "‡∏Ñ‡πâ‡∏ô‡∏´‡∏≤ (_S):"
+msgstr "§ÈπÀ“ (_S):"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
@@ -234,7 +224,7 @@ msgstr "GNOME - Desktop"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
-msgstr "‡πÄ‡∏≠‡∏Å‡∏™‡∏≤‡∏£‡πÄ‡∏û‡∏¥‡πà‡∏°‡πÄ‡∏ï‡∏¥‡∏°"
+msgstr "‡Õ° “√‡æ‘Ë¡‡µ‘¡"
 
 # This is Manual as in "man page"...shouldn't be translated
 #: src/yelp-view-toc.c:168 src/yelp-view-toc.c:492
@@ -248,11 +238,11 @@ msgstr "Info Pages"
 
 #: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
 msgid "Documents"
-msgstr "‡πÄ‡∏≠‡∏Å‡∏™‡∏≤‡∏£"
+msgstr "‡Õ° “√"
 
 #: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
 msgid "Categories"
-msgstr "‡∏õ‡∏£‡∏∞‡πÄ‡∏†‡∏ó"
+msgstr "ª√–‡¿∑"
 
 #: src/yelp-view-toc.c:447
 msgid "Manual pages"
@@ -260,7 +250,7 @@ msgstr "Manual pages"
 
 #: src/yelp-view-toc.c:707
 msgid "GNOME is"
-msgstr "GNOME ‡∏Ñ‡∏∑‡∏≠"
+msgstr "GNOME §◊Õ"
 
 #: src/yelp-view-toc.c:708
 msgid "Free Software"
@@ -272,19 +262,19 @@ msgstr "(C)"
 
 #: src/yelp-window.c:200
 msgid "/_File"
-msgstr "/‡πÅ‡∏ü‡πâ‡∏° (_F)"
+msgstr "/·øÈ¡ (_F)"
 
 #: src/yelp-window.c:201
 msgid "/File/_New window"
-msgstr "/‡πÅ‡∏ü‡πâ‡∏°/‡∏´‡∏ô‡πâ‡∏≤‡∏ï‡πà‡∏≤‡∏á‡πÉ‡∏´‡∏°‡πà (_N)"
+msgstr "/·øÈ¡/ÀπÈ“µË“ß„À¡Ë (_N)"
 
 #: src/yelp-window.c:204
 msgid "/File/_Close window"
-msgstr "/‡πÅ‡∏ü‡πâ‡∏°/‡∏õ‡∏¥‡∏î‡∏´‡∏ô‡πâ‡∏≤‡∏ï‡πà‡∏≤‡∏á (_C)"
+msgstr "/·øÈ¡/ª‘¥ÀπÈ“µË“ß (_C)"
 
 #: src/yelp-window.c:208
 msgid "/_Edit"
-msgstr "/‡πÅ‡∏Å‡πâ‡πÑ‡∏Ç (_E)"
+msgstr "/·°È‰¢ (_E)"
 
 #.
 #. {N_("/Edit/_Find in page..."),   NULL,
@@ -296,7 +286,7 @@ msgstr "/‡πÅ‡∏Å‡πâ‡πÑ‡∏Ç (_E)"
 #.
 #: src/yelp-window.c:218
 msgid "/_Go"
-msgstr "/‡πÑ‡∏õ (_G)"
+msgstr "/‰ª (_G)"
 
 #.
 #. {N_("/Go/_Back"),                NULL,
@@ -314,106 +304,106 @@ msgstr "/‡πÑ‡∏õ (_G)"
 #.
 #: src/yelp-window.c:234
 msgid "/_Help"
-msgstr "/‡∏ß‡∏¥‡∏ò‡∏µ‡πÉ‡∏ä‡πâ (_H)"
+msgstr "/«‘∏’„™È (_H)"
 
 #: src/yelp-window.c:235
 msgid "/Help/_About"
-msgstr "/‡∏ß‡∏¥‡∏ò‡∏µ‡πÉ‡∏ä‡πâ/‡πÄ‡∏Å‡∏µ‡πà‡∏¢‡∏ß‡∏Å‡∏±‡∏ö (_A)"
+msgstr "/«‘∏’„™È/‡°’Ë¬«°—∫ (_A)"
 
 #: src/yelp-window.c:297
 msgid "Help Browser"
-msgstr "‡∏ï‡∏±‡∏ß‡∏≠‡πà‡∏≤‡∏ô‡∏ß‡∏¥‡∏ò‡∏µ‡πÉ‡∏ä‡πâ"
+msgstr "µ—«ÕË“π«‘∏’„™È"
 
 #: src/yelp-window.c:494
 msgid "Back"
-msgstr "‡∏ñ‡∏≠‡∏¢"
+msgstr "∂Õ¬"
 
 #: src/yelp-window.c:495
 msgid "Show previous page in history"
-msgstr "‡πÑ‡∏õ‡∏´‡∏ô‡πâ‡∏≤‡∏Å‡πà‡∏≠‡∏ô‡∏´‡∏ô‡πâ‡∏≤‡∏ô‡∏µ‡πâ‡πÉ‡∏ô‡∏õ‡∏£‡∏∞‡∏ß‡∏±‡∏ï‡∏¥‡∏Å‡∏≤‡∏£‡πÉ‡∏ä‡πâ"
+msgstr "‰ªÀπÈ“°ËÕπÀπÈ“π’È„πª√–«—µ‘°“√„™È"
 
 #: src/yelp-window.c:505
 msgid "Forward"
-msgstr "‡∏ñ‡∏±‡∏î‡πÑ‡∏õ"
+msgstr "∂—¥‰ª"
 
 #: src/yelp-window.c:506
 msgid "Show next page in history"
-msgstr "‡πÑ‡∏õ‡∏´‡∏ô‡πâ‡∏≤‡∏ñ‡∏±‡∏î‡πÑ‡∏õ‡πÉ‡∏ô‡∏õ‡∏£‡∏∞‡∏ß‡∏±‡∏ï‡∏¥‡∏Å‡∏≤‡∏£‡πÉ‡∏ä‡πâ"
+msgstr "‰ªÀπÈ“∂—¥‰ª„πª√–«—µ‘°“√„™È"
 
 #: src/yelp-window.c:518
 msgid "Home"
-msgstr "‡πÄ‡∏£‡∏¥‡πà‡∏°‡∏ï‡πâ‡∏ô"
+msgstr "‡√‘Ë¡µÈπ"
 
 #: src/yelp-window.c:519
 msgid "Go to home view"
-msgstr "‡πÑ‡∏õ‡∏ó‡∏µ‡πà‡∏´‡∏ô‡πâ‡∏≤‡πÄ‡∏£‡∏¥‡πà‡∏°‡∏ï‡πâ‡∏ô"
+msgstr "‰ª∑’ËÀπÈ“‡√‘Ë¡µÈπ"
 
 #: src/yelp-window.c:624
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr "‡πÄ‡∏≠‡∏Å‡∏™‡∏≤‡∏£ '%s' ‡πÑ‡∏°‡πà‡∏°‡∏µ‡∏≠‡∏¢‡∏π‡πà"
+msgstr "‡Õ° “√ '%s' ‰¡Ë¡’Õ¬ŸË"
 
 #: src/yelp-window.c:644
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "‡≈‘°√Õß√—∫‡Õ° “√™π‘¥ DocBook SGML ·≈È«"
 
 #: src/yelp-window.c:719 src/yelp-window.c:806 src/yelp-window.c:965
-#, fuzzy, c-format
+#, c-format
 msgid "The document '%s' could not be opened"
-msgstr "‡πÄ‡∏≠‡∏Å‡∏™‡∏≤‡∏£ '%s' ‡πÑ‡∏°‡πà‡∏°‡∏µ‡∏≠‡∏¢‡∏π‡πà"
+msgstr "‡ª‘¥‡Õ° “√ '%s' ‰¡Ë ”‡√Á®"
 
 #: src/yelp-window.c:876
 msgid "Loading&nbsp;&nbsp;&nbsp;"
-msgstr ""
+msgstr "°”≈—ßÕË“π&nbsp;&nbsp;&nbsp;"
 
 #: src/yelp-window.c:880
 msgid "Loading.&nbsp;&nbsp;"
-msgstr ""
+msgstr "°”≈—ßÕË“π.&nbsp;&nbsp;"
 
 #: src/yelp-window.c:884
-#, fuzzy
 msgid "Loading..&nbsp;"
-msgstr "‡∏Å‡∏≥‡∏•‡∏±‡∏á‡πÄ‡∏£‡∏µ‡∏¢‡∏Å..."
+msgstr "°”≈—ßÕË“π..&nbsp;"
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1046
 msgid "translator_credits"
-msgstr "‡πÅ‡∏õ‡∏•‡πÇ‡∏î‡∏¢ http://gnome-th.sourceforge.net"
+msgstr ""
+"‰æ»“¢Ï  ’‡À≈◊Õ° «— ¥‘Ï\n"
+"http://gnome-th.sf.net"
 
 #: src/yelp-window.c:1051
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "‡∏ï‡∏±‡∏ß‡∏≠‡πà‡∏≤‡∏ô‡∏ß‡∏¥‡∏ò‡∏µ‡πÉ‡∏ä‡πâ‡∏Ç‡∏≠‡∏á GNOME 2.0"
+msgstr "µ—«· ¥ß«‘∏’„™È¢Õß GNOME"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "‡∏ß‡∏¥‡∏ò‡∏µ‡πÉ‡∏ä‡πâ GNOME"
+msgstr "«‘∏’„™È GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "‡∏ß‡∏¥‡∏ò‡∏µ‡πÉ‡∏ä‡πâ"
+msgstr "«‘∏’„™È"
 
 #~ msgid "/Edit/_Find in page..."
-#~ msgstr "/‡πÅ‡∏Å‡πâ‡πÑ‡∏Ç/‡∏´‡∏≤‡πÉ‡∏ô‡∏´‡∏ô‡πâ‡∏≤‡∏ô‡∏µ‡πâ (_F)..."
+#~ msgstr "/·°È‰¢/À“„πÀπÈ“π’È (_F)..."
 
 #~ msgid "/Edit/_Find again"
-#~ msgstr "/‡πÅ‡∏Å‡πâ‡πÑ‡∏Ç/‡∏´‡∏≤‡∏≠‡∏µ‡∏Å (_F)..."
+#~ msgstr "/·°È‰¢/À“Õ’° (_F)..."
 
 #~ msgid "/Go/_Back"
-#~ msgstr "/‡πÑ‡∏õ/‡∏Ç‡πâ‡∏≤‡∏á‡∏´‡∏•‡∏±‡∏á (_B)"
+#~ msgstr "/‰ª/¢È“ßÀ≈—ß (_B)"
 
 #~ msgid "/Go/_Forward"
-#~ msgstr "/‡πÑ‡∏õ/‡∏Ç‡πâ‡∏≤‡∏á‡∏´‡∏ô‡πâ‡∏≤ (_F)"
+#~ msgstr "/‰ª/¢È“ßÀπÈ“ (_F)"
 
 #~ msgid "/Go/_Home"
-#~ msgstr "/‡πÑ‡∏õ/‡∏ö‡πâ‡∏≤‡∏ô (_H)"
+#~ msgstr "/‰ª/∫È“π (_H)"
 
 #~ msgid "/Go/_Index"
-#~ msgstr "/‡πÑ‡∏õ/‡∏î‡∏±‡∏ä‡∏ô‡∏µ (_I)"
+#~ msgstr "/‰ª/¥—™π’ (_I)"
 
 #~ msgid "Index"
-#~ msgstr "‡∏î‡∏±‡∏ä‡∏ô‡∏µ"
+#~ msgstr "¥—™π’"
 
 #~ msgid "Search in the index"
-#~ msgstr "‡∏´‡∏≤‡πÉ‡∏ô‡∏î‡∏±‡∏ä‡∏ô‡∏µ"
+#~ msgstr "À“„π¥—™π’"
