--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-08  Shaun McCance  <shaunm@gnome.org>
 
+	* configure.in: Version 2.5.1.
+
+2003-12-08  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-toc-pager.c:
 	- Fixed a crasher with gnome_vfs_directory_close.
 
