Updated Greek translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-12  Nikos Charonitakis  <frolix68@gnome.org>
+
+	* el.po: Updated Greek translation.
+
 2003-12-10  Francisco F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
