--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-13  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2003-12-12  Nikos Charonitakis  <frolix68@gnome.org>
 
 	* el.po: Updated Greek translation.
